Fix like button sizing for truncated long image captions

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -47,8 +47,8 @@
   overflow: hidden;
 }
 .card__like-btn {
-  width: 23px;
-  height: 20px;
+  min-width: 23px;
+  min-height: 20px;
   border: none;
   background-image: url(../images/like-icon.svg);
   background-size: contain;
